--- a/src/ba/unsa/etf/rpr/tutorijal08/sample.fxml
+++ b/src/ba/unsa/etf/rpr/tutorijal08/sample.fxml
@@ -3,14 +3,17 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.tutorijal08.Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.tutorijal08.Controller">
    <children>
       <Label layoutX="14.0" layoutY="14.0" text="Uzorak:" />
       <TextField fx:id="unos" layoutX="60.0" layoutY="10.0" />
       <Button fx:id="searchBtn" layoutX="222.0" layoutY="10.0" mnemonicParsing="false" onAction="#trazi" text="Traži" />
       <ListView fx:id="list" editable="true" layoutX="14.0" layoutY="44.0" prefHeight="345.0" prefWidth="573.0" />
+      <Button fx:id="stopBtn" layoutX="278.0" layoutY="10.0" mnemonicParsing="false" onAction="#stop" text="Prekini" />
+      <ProgressIndicator fx:id="progressInd" layoutX="537.0" layoutY="10.0" prefHeight="26.0" prefWidth="33.0" visible="false" />
    </children>
 </Pane>
