Zadatak 1: napravljena disable opcija za buttone trazi i prekini, button prekini izvršava prekid pretrage

--- a/src/ba/unsa/etf/rpr/tutorijal08/sample.fxml
+++ b/src/ba/unsa/etf/rpr/tutorijal08/sample.fxml
@@ -13,7 +13,7 @@
       <TextField fx:id="unos" layoutX="60.0" layoutY="10.0" />
       <Button fx:id="searchBtn" layoutX="222.0" layoutY="10.0" mnemonicParsing="false" onAction="#trazi" text="Traži" />
       <ListView fx:id="list" editable="true" layoutX="14.0" layoutY="44.0" prefHeight="345.0" prefWidth="573.0" />
-      <Button fx:id="stopBtn" layoutX="278.0" layoutY="10.0" mnemonicParsing="false" onAction="#stop" text="Prekini" />
+      <Button fx:id="stopBtn" disable="true" layoutX="278.0" layoutY="10.0" mnemonicParsing="false" onAction="#stop" text="Prekini" />
       <ProgressIndicator fx:id="progressInd" layoutX="537.0" layoutY="10.0" prefHeight="26.0" prefWidth="33.0" visible="false" />
    </children>
 </Pane>
